--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "target": "esnext",
+    "outDir": "lib",
     "useDefineForClassFields": true,
     "module": "esnext",
     "moduleResolution": "node",
