--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue3-org",
-  "version": "0.0.20",
+  "version": "0.0.27",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "vue": "^3.2.22",
-    "vue-router": "^4.0.11"
+    "vue-router": "^4.0.11",
+    "vue3-org": "^0.0.27"
   },
   "devDependencies": {
     "@tailwindcss/postcss7-compat": "^2.2.17",
